Make things simpler
- Make the advantages and disadvantages of OpenJ9 clear
- Remove info about all GC's except Shenandoah